--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node ./dist/server/main.js",
     "start:next": "next dev",
     "start:dev": "NODE_ENV=development nest start --path ./tsconfig.server.json --watch",
+    "xx:start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --path tsconfig.server.json --watch",
     "start:debug": "NODE_ENV=development nest start --path ./tsconfig.server.json --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,7 +27,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "nest-next": "^10.0.0",
+    "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
