--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
@@ -34,7 +35,9 @@
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "solc": "^0.8.15",
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
