--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
+    "mysql2": "^2.3.3",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
     "react": "^18.2.0",
@@ -39,6 +41,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "solc": "^0.8.15",
+    "typeorm": "^0.3.7",
     "web3": "^1.7.5"
   },
   "devDependencies": {
