--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -7,6 +7,7 @@
   "include": [
     "./src/server/**/*.ts",
     "./src/shared/**/*.ts",
+    "./src/server/config/*.pem",
     "./@types/**/*.d.ts"
   ]
 }
