--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mysql:
     image: mysql:8.0
-    platform: linux/amd64
+
     ports:
       - 3306:3306
     environment:
@@ -20,7 +20,7 @@ services:
     build:
       ## --platform=linux/amd64 is for M1 MACS
       ## --platform=linux/x86-64 is probably for anything else :P.
-      dockerfile: src/server/Dockerfile --platform=linux/amd64
+      dockerfile: src/server/Dockerfile
       context: .
       # Only will build development stage from our dockerfile
       target: development
