Primer landing page :)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@fontsource/archivo": "^4.5.8",
+    "@fontsource/dm-sans": "^4.5.8",
+    "@mdx-js/react": "1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -35,12 +39,21 @@
     "mysql2": "^2.3.3",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
+    "rc-drawer": "^5.1.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-modal-video": "^1.2.10",
+    "react-scroll": "^1.8.7",
+    "react-stickynode": "^4.1.0",
+    "react-waypoint": "^10.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "solc": "^0.8.15",
+    "theme-ui": "^0.14.7",
     "typeorm": "^0.3.7",
     "web3": "^1.7.5"
   },
