--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "solc": "^0.8.15",
+    "sqlite3": "^5.0.11",
     "typeorm": "^0.3.7",
     "web3": "^1.7.5"
   },
