--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
     "@fontsource/archivo": "^4.5.8",
     "@fontsource/dm-sans": "^4.5.8",
     "@mdx-js/react": "1",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -39,6 +44,7 @@
     "mysql2": "^2.3.3",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
+    "perfect-scrollbar": "^1.5.5",
     "rc-drawer": "^5.1.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.2",
