subo esto para que no me rompa mas es eslint

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ DEMO_CONTRACT='0x46174d7A2Db240F9aF3Dc84d08E634F3AE58691'
 
 DB_HOST='127.0.0.1'
 DB_USER='root'
-DB_PASSWORD=''
+DB_PASSWORD='test'
 DB_NAME='test'
 DB_PORT=3306
