--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "optionalDependencies": {
+    "win-node-env": "^0.6.1"
   }
 }
