--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
     "mysql2": "^2.3.3",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
