--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mdx-js/react": "1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@mui/styles": "^5.10.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
