--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/archivo": "^4.5.8",
     "@fontsource/dm-sans": "^4.5.8",
+    "@material-ui/core": "^4.12.4",
     "@mdx-js/react": "1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
@@ -39,6 +40,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
+    "autoprefixer": "^10.4.8",
+    "clean-css": "^5.3.1",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
@@ -46,6 +49,7 @@
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
     "perfect-scrollbar": "^1.5.5",
+    "postcss": "^8.4.16",
     "rc-drawer": "^5.1.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.2",
