habemus layout de account

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:nest": "nest build --path ./tsconfig.server.json",
     "start": "node ./dist/server/main.js",
     "start:next": "next dev",
-    "start:dev": "NODE_ENV=development nest start --path ./tsconfig.server.json --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --path ./tsconfig.server.json --watch",
     "xx:start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --path tsconfig.server.json --watch",
     "start:debug": "NODE_ENV=development nest start --path ./tsconfig.server.json --debug --watch",
     "start:prod": "node dist/main",
@@ -80,6 +80,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "^8.3.0",
