--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-next-example",
+  "name": "Forestoken",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -45,7 +45,6 @@
     "dotenv": "^16.0.2",
     "autoprefixer": "^10.4.8",
     "clean-css": "^5.3.1",
-    "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
     "mysql2": "^2.3.3",
