--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ CLIENT_SECRET='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'
 
 DB_HOST='127.0.0.1'
 DB_USER='root'
-DB_PASSWORD='root'
+DB_PASSWORD='test'
 DB_NAME='test'
 DB_PORT=3306
