--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-scroll": "^1.8.7",
     "react-stickynode": "^4.1.0",
     "react-waypoint": "^10.3.0",
+    "recharts": "^2.1.14",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
