first version mint endpoint

--- a/.env
+++ b/.env
@@ -8,9 +8,8 @@ DEMO_CONTRACT='0x46174d7A2Db240F9aF3Dc84d08E634F3AE58691'
 CLIENT_ID='618062513819-7408serup3f3glq7v23tpomldligsed7.apps.googleusercontent.com'
 CLIENT_SECRET='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'
 
-
 DB_HOST='127.0.0.1'
 DB_USER='root'
-DB_PASSWORD='test'
+DB_PASSWORD=''
 DB_NAME='test'
 DB_PORT=3306
