--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "rc-drawer": "^5.1.0",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
-    "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-modal-video": "^1.2.10",
     "react-scroll": "^1.8.7",
+    "react-select": "^5.4.0",
+    "react-select-country-list": "^2.2.3",
     "react-stickynode": "^4.1.0",
     "react-waypoint": "^10.3.0",
     "reflect-metadata": "^0.1.13",
