--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-images-uploading": "^3.1.7",
     "react-modal-video": "^1.2.10",
     "react-scroll": "^1.8.7",
     "react-select": "^5.4.0",
