--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
     "autoprefixer": "^10.4.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "clean-css": "^5.3.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
