--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "clean-css": "^5.3.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mysql2": "^2.3.3",
     "nest-next": "https://github.com/yakovlev-alexey/nest-next/tarball/base-path-dist",
     "next": "^12.2.0",
