--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
+    "@react-pdf/renderer": "^3.0.0",
     "autoprefixer": "^10.4.8",
     "clean-css": "^5.3.1",
     "framer-motion": "^6.5.1",
@@ -84,6 +85,7 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-pdf": "^5.7.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
