--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-scroll": "^1.8.7",
     "react-select": "^5.4.0",
     "react-stickynode": "^4.1.0",
+    "react-toastify": "^9.0.8",
     "react-waypoint": "^10.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
