--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.0",
     "@openzeppelin/contracts": "^4.7.2",
     "autoprefixer": "^10.4.8",
