--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@openzeppelin/contracts": "^4.7.2",
     "@react-pdf/renderer": "^3.0.0",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "clean-css": "^5.3.1",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
@@ -82,6 +83,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
