--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ CLIENT_ID='618062513819-7408serup3f3glq7v23tpomldligsed7.apps.googleusercontent.
 CLIENT_SECRET='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'
 
 DB_HOST='127.0.0.1'
-DB_USER='root'
-DB_PASSWORD=''
+DB_USER='test'
+DB_PASSWORD='test'
 DB_NAME='test'
 DB_PORT=3306
