--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "^8.3.0",
