--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/styles": "^5.10.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
@@ -46,6 +47,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "clean-css": "^5.3.1",
+    "express-session": "^1.17.3",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
     "html2canvas": "^1.4.1",
@@ -85,6 +87,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.2",
