--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "axios": "^1.1.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
