--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "yarn build:next && yarn build:nest",
+    "build": "npm build:next && npm build:nest",
     "build:next": "next build",
     "build:nest": "nest build --path ./tsconfig.server.json",
     "start": "node ./dist/server/main.js",
