--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "clean-css": "^5.3.1",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
@@ -85,6 +87,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
