--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "web3": "^1.7.5"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
