--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -13,6 +13,8 @@ WORKDIR /usr/src/app
 # Copying this first prevents re-running npm install on every code change.
 COPY --chown=node:node package*.json ./
 
+RUN echo $(ls)
+
 # Install app dependencies using the `npm ci` command instead of `npm install`
 RUN npm ci
 
