--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clean-css": "^5.3.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "cookies-next": "^2.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^6.5.1",
     "fs-extra": "^10.1.0",
