--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test using Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 16
+      - uses: actions/cache@v2
+        with:
+           path: ${{ github.workspace }}/node_modules
+           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
       - run: yarn install
+      - run: yarn build
       - run: yarn test:ci
+      - run: docker-compose build
