--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test using Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 16
       - name: Install dependencies
@@ -17,13 +17,13 @@ jobs:
         with:
            path: ${{ github.workspace }}/node_modules
            key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
-        run: yarn install
+      - run: yarn install
 
       - name: Run build
-        run: yarn build
+      - run: yarn build
 
       - name: Run tests
-        run: yarn test:ci
+      - run: yarn test:ci
   docker:
     timeout-minutes: 10
     runs-on: ubuntu-latest
