--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: Test build
-        run: docker-compose build
+      - run: docker-compose build
