--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,13 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
+      - name: Cache step
         uses: actions/cache@v2
         with:
            path: ${{ github.workspace }}/node_modules
            key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install dependencies
         run: yarn install
 
       - name: Run build
